--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <div class="header">
 <header>
-  <img src="../img/logo01.png">
+  <img src="logo01.png">
 </header>
 </div>
 <div>
@@ -46,10 +46,10 @@
 <ul>
   <li>© USN it/inf study</li>
   <li>Email: mikaelron@gmail.com</li>
-  <li><a href="header.html"><img src="../img/iconmonstr-product-3-32.png"></a></li>
-  <li><a href="header.html"><img src="../img/iconmonstr-product-3-32.png"></a></li>
-  <li><a href="header.html"><img src="../img/iconmonstr-product-3-32.png"></a></li>
-  <li><a href="header.html"><img src="../img/iconmonstr-product-3-32.png"></a></li>
+  <li><a href="header.html"><img src="iconmonstr-product-3-32.png"></a></li>
+  <li><a href="header.html"><img src="iconmonstr-product-3-32.png"></a></li>
+  <li><a href="header.html"><img src="iconmonstr-product-3-32.png"></a></li>
+  <li><a href="header.html"><img src="iconmonstr-product-3-32.png"></a></li>
 
 
 </ul>
