--- a/index.html
+++ b/index.html
@@ -13,6 +13,19 @@
 <div>
   
 </div>
+  
+<div class="bookshelf">
+  <img src="BookShelf.png" alt="Book is Shelf">	
+</div>				
+<div class="zoomblue">
+	<img src="Bookblue.png" alt="Book is Blue">
+</div>	
+<div class="zoomred">
+	<img src="Bookred.png" alt="Book is Blue">
+</div>	
+<div class="zoomgreen">
+	<img src="Bookgreen.png" alt="Book is Blue">
+</div>	
 <p>ggggggggggggggggg</p>
 <p>ggggggggggggggggg</p>
 <p>ggggsondre var hergggggggggg</p>
