--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
 </div>
   
 <div class="bookshelf">
-  <img src="BookShelf.png" alt="Book is Shelf">	
+  <img src="../BookSelection/BookShelf.png" alt="Book is Shelf">	
 </div>				
 <div class="zoomblue">
-	<img src="Bookblue.png" alt="Book is Blue">
+	<img src="../BookSelection/Bookblue.png" alt="Book is Blue">
 </div>	
 <div class="zoomred">
-	<img src="Bookred.png" alt="Book is Blue">
+	<img src="../BookSelection/Bookred.png" alt="Book is Blue">
 </div>	
 <div class="zoomgreen">
-	<img src="Bookgreen.png" alt="Book is Blue">
+	<img src="../BookSelection/Bookgreen.png" alt="Book is Blue">
 </div>	
 <p>ggggggggggggggggg</p>
 <p>ggggggggggggggggg</p>
