--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 <ul>
   <li>© USN it/inf study</li>
   <li>Email: mikaelron@gmail.com</li>
-  <li><a href="header.html"><img src="iconmonstr-product-3-32.png"></a></li>
-  <li><a href="header.html"><img src="iconmonstr-product-3-32.png"></a></li>
-  <li><a href="header.html"><img src="iconmonstr-product-3-32.png"></a></li>
+  <li><a href="header.html"><img src="iconmonstr-facebook-6-32.png"></a></li>
+  <li><a href="header.html"><img src="iconmonstr-instagram-1-32.png"></a></li>
+  <li><a href="header.html"><img src="iconmonstr-twitter-1-32.png"></a></li>
   <li><a href="header.html"><img src="iconmonstr-product-3-32.png"></a></li>
 
 
