--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </div>
   
 <div class="bookshelf">
-  <img src="BookSelection/BookShelf.png" alt="Book is Shelf">	
+  <img src="/BookSelection/BookShelf.png" alt="Book is Shelf">	
 </div>				
 <div class="zoomblue">
 	<img src="BookSelection/Bookblue.png" alt="Book is Blue">
