--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
   <img src="/BookSelection/BookShelf.png" alt="Book is Shelf">	
 </div>				
 <div class="zoomblue">
-	<img src="BookSelection/Bookblue.png" alt="Book is Blue">
+	<img src="/BookSelection/Bookblue.png" alt="Book is Blue">
 </div>	
 <div class="zoomred">
-	<img src="BookSelection/Bookred.png" alt="Book is Blue">
+	<img src="/BookSelection/Bookred.png" alt="Book is Blue">
 </div>	
 <div class="zoomgreen">
-	<img src="BookSelection/Bookgreen.png" alt="Book is Blue">
+	<img src="/BookSelection/Bookgreen.png" alt="Book is Blue">
 </div>	
 <p>ggggggggggggggggg</p>
 <p>ggggggggggggggggg</p>
