--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
   <img src="BookShelf.png" alt="Book is Shelf">	
 </div>				
 <div class="zoomblue">
-	<img src="Bookblue.png" alt="Book is Blue">
+	<img src="BookBlue.png" alt="Book is Blue">
 </div>	
 <div class="zoomred">
-	<img src="Bookred.png" alt="Book is Blue">
+	<img src="BookRed.png" alt="Book is Blue">
 </div>	
 <div class="zoomgreen">
-	<img src="Bookgreen.png" alt="Book is Blue">
+	<img src="BookGreen.png" alt="Book is Blue">
 </div>	
 	
 <div class="footer">
