--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
 <div class="zoomgreen">
 	<img src="BookGreen.png" alt="Book is Blue">
 </div>	
-	
+<div class="mainarticle">
+	<p> main article </p>
+
 <div class="footer">
 <ul>
   <li>© USN it/inf study</li>
