--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
 <div class="zoomgreen">
 	<img src="BookGreen.png" alt="Book is Blue">
 </div>	
+	
+<div class="mainarticle">
+	<p> main article </p>
+</div>
 
 <div class="footer">
 <ul>
