--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<link rel="stylesheet" type="text/css" href="../project-animated-web-master/index.css">
+<link rel="stylesheet" type="text/css" href="index.css">
 <html>
 <head>
   <title></title>
