--- a/Project/HTML/index.html
+++ b/Project/HTML/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<link rel="stylesheet" type="text/css" href="../project-animated-web-master/index.css">
+<link rel="stylesheet" type="text/css" href="../CSS/index.css">
 <html>
 <head>
   <title></title>
@@ -7,7 +7,7 @@
 <body>
 <div class="header">
 <header>
-  <img src="../project-animated-web-master/logo01.png">
+  <img src="../IMG/logo01.png">
 </header>
 </div>
 <div>
@@ -15,21 +15,21 @@
 </div>
   <div class="bookalign">
 <div class="bookshelf">
-  <img src="../project-animated-web-master/BookShelf.png" alt="Book is Shelf"> 
+  <img src="../IMG/BookShelf.png" alt="Book is Shelf"> 
 </div>        
 <div class="zoomblue">
-  <img src="../project-animated-web-master/BookBlue.png" alt="Book is Blue">
+  <img src="../IMG/BookBlue.png" alt="Book is Blue">
 </div>  
 <div class="zoomred">
-  <img src="../project-animated-web-master/BookRed.png" alt="Book is Blue">
+  <img src="../IMG/BookRed.png" alt="Book is Blue">
 </div>  
 <div class="zoomgreen">
-  <img src="../project-animated-web-master/BookGreen.png" alt="Book is Blue">
+  <img src="../IMG/BookGreen.png" alt="Book is Blue">
 </div>  
 </div>
 <div class="mainarticle">
   <pre> </pre>
-  <img src="../project-animated-web-master/school.jpeg" alt="skole bilde" class="alignbilde">
+  <img src="../IMG/school.jpeg" alt="skole bilde" class="alignbilde">
 <div class="cursiveblock">
   <p class="cursiveTxt">
     "Universitet i bergen, som har vunnet 4 grammys og 1 fredhets pris"
@@ -55,10 +55,10 @@ Vi har tett dialog med offentlig sektor og næringslivet, både på nye og aller
 <ul>
   <li>© USN it/inf study</li>
   <li>Email: mikaelron@gmail.com</li>
-  <li><a href="header.html"><img src="../project-animated-web-master/iconmonstr-facebook-6-32.png"></a></li>
-  <li><a href="header.html"><img src="../project-animated-web-master/iconmonstr-instagram-1-32.png"></a></li>
-  <li><a href="header.html"><img src="../project-animated-web-master/iconmonstr-twitter-1-32.png"></a></li>
-  <li><a href="header.html"><img src="../project-animated-web-master/iconmonstr-product-3-32.png"></a></li>
+  <li><a href="header.html"><img src="../IMG/iconmonstr-facebook-6-32.png"></a></li>
+  <li><a href="header.html"><img src="../IMG/iconmonstr-instagram-1-32.png"></a></li>
+  <li><a href="header.html"><img src="../IMG/iconmonstr-twitter-1-32.png"></a></li>
+  <li><a href="header.html"><img src="../IMG/iconmonstr-product-3-32.png"></a></li>
 
 
 </ul>
