--- a/Project/HTML/index.html
+++ b/Project/HTML/index.html
@@ -64,6 +64,9 @@ Vi har tett dialog med offentlig sektor og næringslivet, både på nye og aller
 </ul>
 </div>
 
-
+<video autoplay muted loop id="myVid" class="parallax">
+<source src="Background_loop.mp4" type="video/mp4">
+Your browser does not support the video tag.
+</video>
 </body>
 </html>
