--- a/Project/HTML/index.html
+++ b/Project/HTML/index.html
@@ -7,12 +7,23 @@
 <body>
 <div class="header">
 <header>
-  <img src="../IMG/Logo01.png">
+  <img src="../IMG/Logo_Owl1.png">
+  <img class="logotext" src="../IMG/Logo_text1.png">
+
+  <div class="topnav">
+  <a class="active" href="#home">Home</a>
+  <a href="#about">About</a>
+  <a href="#contact">Contact</a>
+  <div class="search-container">
+    <form action="/action_page.php">
+      <input type="text" placeholder="Search.." name="search">
+      <button type="submit"><img src="iconmonstr-magnifier-4-24.png"><i class="fa fa-search"></i></button>
+    </form>
+  </div>
+</div>
 </header>
 </div>
-<div>
   
-</div>
   <div class="bookalign">
 <div class="bookshelf">
   <img src="../IMG/BookShelf.png" alt="Book is Shelf"> 
