--- a/Project/HTML/index.html
+++ b/Project/HTML/index.html
@@ -8,7 +8,7 @@
 <div class="header">
 <header>
   <img src="../IMG/Logo_Owl1.png">
-  <img class="logotext" src="../IMG/Logo_text1.png">
+  <img class="logotext" src="../IMG/Logo_Text1.png">
 
   <div class="topnav">
   <a class="active" href="#home">Home</a>
