--- a/Parallax-bakgrunnsvideo/index.html
+++ b/Parallax-bakgrunnsvideo/index.html
@@ -4,14 +4,23 @@
     <meta charset="utf-8">
     <title></title>
     <link rel="stylesheet" href="style.css">
-    <script src="myscripts.js"></script>
+
   </head>
 
   <body>
-    <video autoplay muted loop id="myVid" class="parallax">
-      <source src="Background_loop.mp4" type="video/mp4">
+
+    <!--<h1 id="lol">Halla balla</h1>-->
+    <!--<script>
+    document.getElementById("lol").style.color = "red";
+  </script>-->
+
+  <video autoplay muted loop id="myVid">
+      <source id="kilde" type="video/mp4">
         Your browser does not support the video tag.
     </video>
-  </body>
-  
+
+<script src="script.js" type="text/javascript"></script>
+
+</body>
+
 </html>
