--- a/Project/HTML/index.html
+++ b/Project/HTML/index.html
@@ -64,12 +64,13 @@ Vi har tett dialog med offentlig sektor og næringslivet, både på nye og aller
 
 <div class="footer">
 <ul>
-  <li>© USN it/inf study</li>
-  <li>Email: mikaelron@gmail.com</li>
-  <li><a href="header.html"><img src="../IMG/iconmonstr-facebook-6-32.png"></a></li>
-  <li><a href="header.html"><img src="../IMG/iconmonstr-instagram-1-32.png"></a></li>
+  <li>© Copyright 2019 USN Inc. All rights reserved</li>
+  <li>Privacy Policy</li>
+  <li>Terms of Use</li>
+  <li>Social Media:</li>
+  <li><a href="header.html"><img src="../IMG/ikon_facebook.png"></a></li>
+  <li><a href="header.html"><img src="../IMG/ikon_instagram2.png"></a></li>
   <li><a href="header.html"><img src="../IMG/iconmonstr-twitter-1-32.png"></a></li>
-  <li><a href="header.html"><img src="../IMG/iconmonstr-product-3-32.png"></a></li>
 
 
 </ul>
