--- a/Project/HTML/index.html
+++ b/Project/HTML/index.html
@@ -69,7 +69,7 @@ Vi har tett dialog med offentlig sektor og næringslivet, både på nye og aller
   <li>Terms of Use</li>
   <li>Social Media:</li>
   <li><a href="header.html"><img src="../IMG/ikon_facebook.png"></a></li>
-  <li><a href="header.html"><img src="../IMG/iconmonstr-instagram-1-32.png"></a></li>
+  <li><a href="header.html"><img src="../IMG/ikon_instagram2.png"></a></li>
   <li><a href="header.html"><img src="../IMG/iconmonstr-twitter-1-32.png"></a></li>
 
 
