--- a/Project/HTML/index.html
+++ b/Project/HTML/index.html
@@ -4,8 +4,8 @@
 <head>
 <div class="header">
 <title>Integrasjon</title>
-  <link href="OwlCarousel2-2.3.4\dist\assets\owl.carousel.css" rel="stylesheet" type="text/css">
-  <link href="OwlCarousel2-2.3.4\dist\assets\owl.theme.default.min.css" rel="stylesheet" type="text/css">
+  <link href="OwlCarousel2-2.3.4\owl.carousel.css" rel="stylesheet" type="text/css">
+  <link href="OwlCarousel2-2.3.4\owl.theme.default.min.css" rel="stylesheet" type="text/css">
 <style type="text/css">
 
 header {
@@ -769,8 +769,8 @@ text-align: center;
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="OwlCarousel2-2.3.4\docs\assets\vendors\jquery.min.js" type="text/javascript"></script>
-<script src="OwlCarousel2-2.3.4\dist\owl.carousel.js" type="text/javascript"></script>
+<script src="OwlCarousel2-2.3.4\jquery.min.js" type="text/javascript"></script>
+<script src="OwlCarousel2-2.3.4\owl.carousel.js" type="text/javascript"></script>
 
 <script type="text/javascript">
   
