--- a/Project/HTML/index.html
+++ b/Project/HTML/index.html
@@ -693,8 +693,8 @@ text-align: center;
 <div class="header">
 
 <header>
-  <img src="./SavePage_files/Logo_Owl1.png">
-  <img class="logotext" src="./SavePage_files/Logo_Text1.png">
+  <img src="../IMG/Logo_Owl1.png">
+  <img class="logotext" src="../IMG/Logo_Text1.png">
 
   <div class="topnav">
   <a class="active" href="https://mwr2019.github.io/project-animated-web/Project/HTML/index#home">Home</a>
@@ -703,7 +703,7 @@ text-align: center;
   <div class="search-container">
     <form action="https://mwr2019.github.io/action_page.php">
       <input type="text" placeholder="Search.." name="search">
-      <button type="submit"><img src="./SavePage_files/iconmonstr-magnifier-4-24.png"><i class="fa fa-search"></i></button>
+      <button type="submit"><img src="../IMG/iconmonstr-magnifier-4-24.png"><i class="fa fa-search"></i></button>
     </form>
   </div>
 </div>
@@ -721,7 +721,7 @@ text-align: center;
     <div class="container">
   <div class="owl-carousel owl-theme">
 
-    <div class="item"><div class="bok1"> <img src="./SavePage_files/BookHistorie.png" alt="Book is Shelf">  </div></div>
+    <div class="item"><div class="bok1"> <img src="../IMG/BookHistorie.png" alt="Book is Shelf">  </div></div>
     <div class="item"><div class="bok2"> <img src="../IMG/BookRed.png" alt="Book is Shelf"></div></div>
     <div class="item"><div class="bok3"> <img src="../IMG/BookJus.png" width="200" height="300" alt="Book is Shelf"> </div></div>
     <div class="item"><div class="bok4"> <img src="../IMG/BookBlue.png" alt="Book is Shelf"> </div></div>
@@ -743,9 +743,9 @@ text-align: center;
   <div class='shadow'></div>
   <div id='lower' class='page-holder'>
     <div class='page'>
-      <div class='front' style="background-image: url('Crackle.png')">
+      <div class='front' style="background-image: url('../IMG/Crackle.png')">
         <div class='back-holder'>
-          <div class='back' style="background-image: url('Fel.png')"></div>
+          <div class='back' style="background-image: url('../IMG/Fel.png')"></div>
         </div>
       </div>
     </div> 
@@ -753,9 +753,9 @@ text-align: center;
 
   <div id='upper' class='page-holder'>
     <div class='page'>
-      <div class='front' style="background-image: url('HistorieCover.png')">
+      <div class='front' style="background-image: url('../IMG/HistorieCover.png')">
         <div class='back-holder'>
-          <div class='back' style="background-image: url('Fel.png')"></div>
+          <div class='back' style="background-image: url('../IMG/Fel.png')"></div>
         </div>
       </div>
     </div>
@@ -894,9 +894,9 @@ Vi har tett dialog med offentlig sektor og næringslivet, både på nye og aller
   <li>Privacy Policy</li>
   <li>Terms of Use</li>
   <li>Social Media:</li>
-  <li><a href="https://mwr2019.github.io/project-animated-web/Project/HTML/header.html"><img src="./SavePage_files/ikon_facebook.png"></a></li>
-  <li><a href="https://mwr2019.github.io/project-animated-web/Project/HTML/header.html"><img src="./SavePage_files/ikon_instagram2.png"></a></li>
-  <li><a href="https://mwr2019.github.io/project-animated-web/Project/HTML/header.html"><img src="./SavePage_files/iconmonstr-twitter-1-32.png"></a></li>
+  <li><a href="https://mwr2019.github.io/project-animated-web/Project/HTML/header.html"><img src="../IMG/ikon_facebook.png"></a></li>
+  <li><a href="https://mwr2019.github.io/project-animated-web/Project/HTML/header.html"><img src="../IMG/ikon_instagram2.png"></a></li>
+  <li><a href="https://mwr2019.github.io/project-animated-web/Project/HTML/header.html"><img src="../IMG/iconmonstr-twitter-1-32.png"></a></li>
 
 
 </ul>
