--- a/Project/HTML/index.html
+++ b/Project/HTML/index.html
@@ -903,7 +903,7 @@ Vi har tett dialog med offentlig sektor og næringslivet, både på nye og aller
 </div>
 
 <video autoplay="" muted="" loop="" id="myVid">
-<source src="Background_loop.mp4" type="video/mp4">
+<source src="../VIDEO/Background_loop.mp4" type="video/mp4">
 Your browser does not support the video tag.
 </video>
 
