--- a/Project/HTML/index.html
+++ b/Project/HTML/index.html
@@ -721,7 +721,7 @@ text-align: center;
     <div class="container">
   <div class="owl-carousel owl-theme">
 
-    <div class="item"><div class="bok1"> <img src="../IMG/BookHistorie.png" alt="Book is Shelf">  </div></div>
+    <div class="item"><div class="bok1"> <img src="../IMG/Historie.png" alt="Book is Shelf">  </div></div>
     <div class="item"><div class="bok2"> <img src="../IMG/BookRed.png" alt="Book is Shelf"></div></div>
     <div class="item"><div class="bok3"> <img src="../IMG/BookJus.png" width="200" height="300" alt="Book is Shelf"> </div></div>
     <div class="item"><div class="bok4"> <img src="../IMG/BookBlue.png" alt="Book is Shelf"> </div></div>
