--- a/Project/HTML/index.html
+++ b/Project/HTML/index.html
@@ -76,10 +76,14 @@ header > h1 {
 
 .bok3{
   transition: 0.4s;
-  margin-top: -30px;
+  margin-top: -40px;
   z-index:1000;
-
 }
+  
+.bok3 img {
+  position:relative
+  top:-100px;
+  }
 
 
 
